--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2>Relacionado</h2>
         <ul>
             <li><a href="https://www.facebook.com/PlantelC47">FACEBOOK</a></li>
-            <li><a href="https://drive.google.com/file/d/1roMjP1-16-54633MZw8GF9O2LfDXTzwS/view?usp=sharing">CONVOCATORIA PRESIDENTE,SECRETARIO Y TESORERO</a></li>
+            <li><a href="https://drive.google.com/file/d/1dKxocuZkj8nZ75DMGjFjUogVdxPwMUtv/view?usp=sharing">REGLAMENTO</a></li>
             <li><a href="https://mexicogob.com/beca-benito-juarez-inicio-de-proceso-de-registro/">BECAS BENITO JUAREZ</a></li>
         </ul>
       </aside>
@@ -55,4 +55,5 @@
             <p> Todos los derechos reservados 2025</p>
         </footer>
     </body>
+
 </html>
